--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "chrome-aws-lambda": "^10.1.0",
     "next": "13.0.2",
+    "puppeteer-core": "^19.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@types/puppeteer-core": "^7.0.4",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.3"
   }
 }
