--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@types/react-dom": "18.0.8",
     "chrome-aws-lambda": "^10.1.0",
     "next": "13.0.2",
+    "phosphor-react": "^1.4.1",
     "puppeteer-core": "^19.2.2",
     "react": "18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "typescript": "4.8.4",
     "xlsx": "^0.18.5"
   },
